# pure-example

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.txt  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
pure_example/: __main__.py  pure_example.py
tests/: test_pure_example.py
